--- a/index.html
+++ b/index.html
@@ -19,9 +19,12 @@
       rel="stylesheet"
     />
     <script src="./app.js" defer></script>
+
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- nav start  -->
+
     <nav>
       <div class="container nav">
         <h1 class="logo">FarStrap Furniture</h1>
@@ -79,5 +82,175 @@
         </ul>
       </div>
     </nav>
+
+    <!-- nav end  -->
+
+    <!-- main start  -->
+
+    <main>
+      <div class="container grid">
+        <div class="article article-1">
+          <div class="article-img">
+            <img src="./img/home-line6141.jpeg" alt="" />
+          </div>
+          <h2 class="article-title">HomeLine-6141</h2>
+          <p class="article-info">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+            ad accusamus alias illo repellat, neque beatae totam sequi velit
+            magnam? Voluptatem praesentium atque itaque autem.
+          </p>
+          <div class="btns">
+            <a href="#" class="btn">More Info</a>
+            <a href="#" class="btn pri-btn"
+              >Add To Cart <i class="fas fa-cart-plus"></i
+            ></a>
+          </div>
+        </div>
+        <div class="article article-2">
+          <div class="article-img">
+            <img src="./img/home-line6311.jpeg" alt="" />
+          </div>
+          <h2 class="article-title">HomeLine-6311</h2>
+          <p class="article-info">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+            ad accusamus alias illo repellat, neque beatae totam sequi velit
+            magnam? Voluptatem praesentium atque itaque autem.
+          </p>
+          <div class="btns">
+            <a href="#" class="btn">More Info</a>
+            <a href="#" class="btn pri-btn"
+              >Add To Cart <i class="fas fa-cart-plus"></i
+            ></a>
+          </div>
+        </div>
+        <div class="article article-3">
+          <div class="article-img">
+            <img src="./img/munin.jpeg" alt="" />
+          </div>
+          <h2 class="article-title">Munin</h2>
+          <p class="article-info">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+            ad accusamus alias illo repellat, neque beatae totam sequi velit
+            magnam? Voluptatem praesentium atque itaque autem.
+          </p>
+          <div class="btns">
+            <a href="#" class="btn">More Info</a>
+            <a href="#" class="btn pri-btn"
+              >Add To Cart <i class="fas fa-cart-plus"></i
+            ></a>
+          </div>
+        </div>
+        <div class="article article-4">
+          <div class="article-img">
+            <img src="./img/plus5031.jpeg" alt="" />
+          </div>
+          <h2 class="article-title">plus5031</h2>
+          <p class="article-info">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+            ad accusamus alias illo repellat, neque beatae totam sequi velit
+            magnam? Voluptatem praesentium atque itaque autem.
+          </p>
+          <div class="btns">
+            <a href="#" class="btn">More Info</a>
+            <a href="#" class="btn pri-btn"
+              >Add To Cart <i class="fas fa-cart-plus"></i
+            ></a>
+          </div>
+        </div>
+        <div class="article article-5">
+          <div class="article-img">
+            <img src="./img/scala5412.jpeg" alt="" />
+          </div>
+          <h2 class="article-title">scala5412</h2>
+          <p class="article-info">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+            ad accusamus alias illo repellat, neque beatae totam sequi velit
+            magnam? Voluptatem praesentium atque itaque autem.
+          </p>
+          <div class="btns">
+            <a href="#" class="btn">More Info</a>
+            <a href="#" class="btn pri-btn"
+              >Add To Cart <i class="fas fa-cart-plus"></i
+            ></a>
+          </div>
+        </div>
+        <div class="article article-6">
+          <div class="article-img">
+            <img src="./img/senator5371.jpeg" alt="" />
+          </div>
+          <h2 class="article-title">senator5371</h2>
+          <p class="article-info">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
+            ad accusamus alias illo repellat, neque beatae totam sequi velit
+            magnam? Voluptatem praesentium atque itaque autem.
+          </p>
+          <div class="btns">
+            <a href="#" class="btn">More Info</a>
+            <a href="#" class="btn pri-btn"
+              >Add To Cart <i class="fas fa-cart-plus"></i
+            ></a>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!-- main end -->
+
+    <footer>
+      <div class="container footer">
+        <div class="about-us">
+          <h3 class="footer-title">About Us</h3>
+          <p class="footer-text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam
+            repudiandae consectetur blanditiis eaque, dolor odit.
+          </p>
+        </div>
+        <div class="contact">
+          <h3 class="footer-title">Contact Us</h3>
+          <ul class="contact-info">
+            <li><b>Email :</b> admin@FarStrap.com</li>
+            <li><b>Phone No :</b> +111-222-333</li>
+            <li>
+              <b>Address :</b> Lorem ipsum dolor sit amet, consectetur
+              adipisicing elit. Illum, explicabo.
+            </li>
+          </ul>
+        </div>
+        <div class="opening-hours">
+          <h3 class="footer-title">Opening Hours</h3>
+          <ul class="opening-hours-info">
+            <li>
+              <b>Mon - Wed</b> <br />
+              11am - 08pm
+            </li>
+            <li>
+              <b>Thu , Fri</b><br />
+              12pm - 10pm
+            </li>
+            <li>
+              <b>Sat , Sun</b><br />
+              01pm - 12am
+            </li>
+          </ul>
+        </div>
+        <div class="social-icons">
+          <h3 class="footer-title">Find Us Online</h3>
+          <div class="footer-icons">
+            <a href="#">
+              <i class="fab fa-facebook-square social"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-instagram social"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-twitter-square social"></i>
+            </a>
+            <a href="#">
+              <i class="fab fa-pinterest-square social"></i>
+            </a>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
