--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <div class="article article-2">
@@ -118,9 +118,9 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <div class="article article-3">
@@ -135,16 +135,16 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <div class="article article-4">
           <div class="article-img">
             <img src="./img/plus5031.jpeg" alt="" />
           </div>
-          <h2 class="article-title">plus5031</h2>
+          <h2 class="article-title">plus-5031</h2>
           <p class="article-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
             ad accusamus alias illo repellat, neque beatae totam sequi velit
@@ -152,16 +152,16 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <div class="article article-5">
           <div class="article-img">
             <img src="./img/scala5412.jpeg" alt="" />
           </div>
-          <h2 class="article-title">scala5412</h2>
+          <h2 class="article-title">scala-5412</h2>
           <p class="article-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
             ad accusamus alias illo repellat, neque beatae totam sequi velit
@@ -169,16 +169,16 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <div class="article article-6">
           <div class="article-img">
             <img src="./img/senator5371.jpeg" alt="" />
           </div>
-          <h2 class="article-title">senator5371</h2>
+          <h2 class="article-title">senator-5371</h2>
           <p class="article-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
             ad accusamus alias illo repellat, neque beatae totam sequi velit
@@ -186,9 +186,9 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
       </div>
