--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <!-- <a href="#" class="btn pri-btn"
+            <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a> -->
+            ></a>
           </div>
         </div>
         <div class="article article-2">
@@ -118,9 +118,9 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <!-- <a href="#" class="btn pri-btn"
+            <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a> -->
+            ></a>
           </div>
         </div>
         <div class="article article-3">
@@ -135,9 +135,9 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <!-- <a href="#" class="btn pri-btn"
+            <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a> -->
+            ></a>
           </div>
         </div>
         <div class="article article-4">
@@ -152,9 +152,9 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <!-- <a href="#" class="btn pri-btn"
+            <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a> -->
+            ></a>
           </div>
         </div>
         <div class="article article-5">
@@ -169,9 +169,9 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <!-- <a href="#" class="btn pri-btn"
+            <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a> -->
+            ></a>
           </div>
         </div>
         <div class="article article-6">
@@ -186,9 +186,9 @@
           </p>
           <div class="btns">
             <a href="#" class="btn">More Info</a>
-            <!-- <a href="#" class="btn pri-btn"
+            <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a> -->
+            ></a>
           </div>
         </div>
       </div>
