--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
             <img src="./img/home-line6141.jpeg" alt="" />
           </div>
           <h2 class="article-title">HomeLine-6141</h2>
-          <p class="article-info">
+          <!-- <p class="article-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
             ad accusamus alias illo repellat, neque beatae totam sequi velit
             magnam? Voluptatem praesentium atque itaque autem.
-          </p>
+          </p> -->
           <div class="btns">
             <a href="#" class="btn">More Info</a>
             <a href="#" class="btn pri-btn"
@@ -111,11 +111,11 @@
             <img src="./img/home-line6311.jpeg" alt="" />
           </div>
           <h2 class="article-title">HomeLine-6311</h2>
-          <p class="article-info">
+          <!-- <p class="article-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
             ad accusamus alias illo repellat, neque beatae totam sequi velit
             magnam? Voluptatem praesentium atque itaque autem.
-          </p>
+          </p> -->
           <div class="btns">
             <a href="#" class="btn">More Info</a>
             <a href="#" class="btn pri-btn"
@@ -128,11 +128,11 @@
             <img src="./img/munin.jpeg" alt="" />
           </div>
           <h2 class="article-title">Munin</h2>
-          <p class="article-info">
+          <!-- <p class="article-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
             ad accusamus alias illo repellat, neque beatae totam sequi velit
             magnam? Voluptatem praesentium atque itaque autem.
-          </p>
+          </p> -->
           <div class="btns">
             <a href="#" class="btn">More Info</a>
             <a href="#" class="btn pri-btn"
@@ -145,11 +145,11 @@
             <img src="./img/plus5031.jpeg" alt="" />
           </div>
           <h2 class="article-title">plus-5031</h2>
-          <p class="article-info">
+          <!-- <p class="article-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
             ad accusamus alias illo repellat, neque beatae totam sequi velit
             magnam? Voluptatem praesentium atque itaque autem.
-          </p>
+          </p> -->
           <div class="btns">
             <a href="#" class="btn">More Info</a>
             <a href="#" class="btn pri-btn"
@@ -162,11 +162,11 @@
             <img src="./img/scala5412.jpeg" alt="" />
           </div>
           <h2 class="article-title">scala-5412</h2>
-          <p class="article-info">
+          <!-- <p class="article-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
             ad accusamus alias illo repellat, neque beatae totam sequi velit
             magnam? Voluptatem praesentium atque itaque autem.
-          </p>
+          </p> -->
           <div class="btns">
             <a href="#" class="btn">More Info</a>
             <a href="#" class="btn pri-btn"
@@ -179,11 +179,11 @@
             <img src="./img/senator5371.jpeg" alt="" />
           </div>
           <h2 class="article-title">senator-5371</h2>
-          <p class="article-info">
+          <!-- <p class="article-info">
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sapiente
             ad accusamus alias illo repellat, neque beatae totam sequi velit
             magnam? Voluptatem praesentium atque itaque autem.
-          </p>
+          </p> -->
           <div class="btns">
             <a href="#" class="btn">More Info</a>
             <a href="#" class="btn pri-btn"
