--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <nav>
       <div class="container nav">
-        <h1 class="logo">FarStrap Furniture</h1>
+        <h1 class="logo"><a href="./index.html">FarStrap Furniture</a></h1>
         <ul class="navigation">
           <li>
             <a href="#" class="flex-link customize"
@@ -56,22 +56,28 @@
             </a>
             <ul class="dropdown collection-dropdown">
               <li>
-                <a href="#" class="dropdown-link">Home-Line 6311 </a>
+                <a href="./homeline6141.html" class="dropdown-link"
+                  >Home-Line 6141
+                </a>
               </li>
               <li>
-                <a href="#" class="dropdown-link">Home-Line 6141 </a>
+                <a href="./homeline6311.html" class="dropdown-link"
+                  >Home-Line 6311
+                </a>
               </li>
               <li>
-                <a href="#" class="dropdown-link">Munin</a>
+                <a href="./munin.html" class="dropdown-link">Munin</a>
               </li>
               <li>
-                <a href="#" class="dropdown-link">Plus 5031</a>
+                <a href="./plus5031.html" class="dropdown-link">Plus 5031</a>
               </li>
               <li>
-                <a href="#" class="dropdown-link">Scala 5412 </a>
+                <a href="./scala5412.html" class="dropdown-link">Scala 5412 </a>
               </li>
               <li>
-                <a href="#" class="dropdown-link">Senator 5371</a>
+                <a href="./senator5371.html" class="dropdown-link"
+                  >Senator 5371</a
+                >
               </li>
             </ul>
           </li>
@@ -100,10 +106,10 @@
             magnam? Voluptatem praesentium atque itaque autem.
           </p> -->
           <div class="btns">
-            <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <a href="./homeline6141.html" class="btn">More Info</a>
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <div class="article article-2">
@@ -117,10 +123,10 @@
             magnam? Voluptatem praesentium atque itaque autem.
           </p> -->
           <div class="btns">
-            <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <a href="./homeline6311.html" class="btn">More Info</a>
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <div class="article article-3">
@@ -134,10 +140,10 @@
             magnam? Voluptatem praesentium atque itaque autem.
           </p> -->
           <div class="btns">
-            <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <a href="./munin.html" class="btn">More Info</a>
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <div class="article article-4">
@@ -151,10 +157,10 @@
             magnam? Voluptatem praesentium atque itaque autem.
           </p> -->
           <div class="btns">
-            <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <a href="./plus5031.html" class="btn">More Info</a>
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <div class="article article-5">
@@ -168,10 +174,10 @@
             magnam? Voluptatem praesentium atque itaque autem.
           </p> -->
           <div class="btns">
-            <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <a href="./scala5412.html" class="btn">More Info</a>
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
         <div class="article article-6">
@@ -185,10 +191,10 @@
             magnam? Voluptatem praesentium atque itaque autem.
           </p> -->
           <div class="btns">
-            <a href="#" class="btn">More Info</a>
-            <a href="#" class="btn pri-btn"
+            <a href="./senator5371.html" class="btn">More Info</a>
+            <!-- <a href="#" class="btn pri-btn"
               >Add To Cart <i class="fas fa-cart-plus"></i
-            ></a>
+            ></a> -->
           </div>
         </div>
       </div>
